# electricore

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  COOKBOOK.md  FINDINGS_315.md  PLAN_MIGRATION_FACTURATION_POLARS.md  PLAN_PIPELINE_ENERGIE_POLARS.md  README.md  architecture_expressions_polars.md  electricore-etl.service.example  electricore-etl.timer  electricore.service  electricore.service.example  export_prm_manquants.py  lander_r64_manuel.py  migration_expressions_polars.md  migration_polars.md  mkdocs.yml  pyproject.toml  spike_315.py  test_demenagement_simple.py  test_duckdb_loaders.py  test_validation_strategy.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: nouveau-taux-regule.yml
.github/workflows/: ci.yml  docker-image.yml  docs.yml  release-client.yml  release.yml
.serena/: project.yml
deploy/: add-provider.sh  harden.sh  install.sh  unharden.sh
deploy/docker/: .env.example  Caddyfile.example  Dockerfile  backup_duckdb.sh  crontab.example  docker-compose.yml  entrypoint.sh  smoke.sh
deploy/lib/: README.md  cli.sh  config.sh  dns.sh  env_validate.sh  etl.sh  harden.sh  ingestion.sh  log.sh  os.sh  secrets.sh  stack.sh  system.sh  user.sh  validate.sh
deploy/relais/: README.md  electricore-relais.service  electricore-relais.timer
deploy/tests/: README.md  secrets_roundtrip.sh  unit.sh
docs/: architecture.excalidraw  chaine_abonnements.md  chronologie-spine-modele.excalidraw  chronologie-spine.excalidraw  configuration.md  contrat-meta-periodes.md  contrat-prestations.md  contrat-rsc.md  contrat-turpe-variable.md  conventions-dates-enedis.md  conventions-nommage.md  demo_chaine_abonnements.py  deploiement.md  electricore-client-design.md  facturiste-bot-cockpit.excalidraw  guide-bot-facturiste.md  index.md  ingestion.excalidraw  ingestion.md  odoo-query-builder.md  operateur-notebook.md  pipeline_abonnement.excalidraw  pipeline_commun.excalidraw  provision-r67-process.excalidraw  qualite-donnees-r151.md  regularisation-lisses.excalidraw  secrets-as-code-sops.excalidraw  transmission.md  turpe-fixe-c4-btsup36kva.md  turpe-usage-standalone.md  typage-chaine.excalidraw
docs/adr/: 0001-monorepo.md  0002-polars-uniquement.md  0003-r151-date-harmonisation.md  0004-langue-francaise.md  0005-duckdb-stockage.md  0006-dlt-etl.md  0007-query-builders.md  0008-rotation-cles-aes.md  0009-architecture-api-centrique.md  0010-bot-telegram-ui-operationnelle.md  0011-deploiement-vps-docker.md  0012-api-read-only-odoo.md  0013-renommage-perimetre-historique.md  0014-lignes-factures-du-mois-avec-flags.md  0015-deploiement-multi-instance.md  0016-core-erp-agnostique.md  0017-layout-deploiement-srv-slug.md  0018-classes-justifiees-par-l-etat.md  0019-roles-loaders-pipelines-builds-integrations.md  0020-linearisation-en-dbt.md  0021-bascule-production-dbt.md  0022-surface-bot-domaines-hybrides.md  0023-periodisations-separees-abonnement-energie.md  0024-trois-registres-de-savoir.md  0025-registre-runtime-pydantic-settings.md  0026-facturation-calendaire-pas-moisniversaire.md  0027-endpoint-lecture-meta-periodes-odoo-tire.md  0028-identite-releve-cle-metier-priorite-sources.md  0029-modele-releves-canonique-dbt-assemble-coeur-arbitre.md  0030-calculateur-turpe-variable-odoo-fournit-assiette.md  0031-durcissement-ssh-vps-utilisateur-ops.md  0032-modeles-marts-hors-flux-namespace.md  0033-qualite-periode-remplace-data-complete-coverage.md  0034-index-kwh-entiers-floor-au-boundary-dbt.md  0035-typage-chaine-ingestion-coeur-proprietaire-par-fait.md  0036-statut-communication-routage-energie-grain-meta.md  0037-trousseau-cles-aes-n-cles-selection-par-essai.md  0038-releves-utilises-imbriques-meta-periodes.md  0039-chronologie-substrat-attributs-situation-hors-mart.md  0040-schema-dechiffrement-aes-iv-prefixe.md  (+19 more)
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/archi/: 01-vision-architecture.md  02-monorepo-integration.md  03-evolution-progressive.md  04-patterns-et-pratiques.md
docs/comprendre/: anatomie-facture.md  compteur-pdl.md  electricore-vu-de-loin.md  index.md  pourquoi-recalculer.md  systeme-electrique.md
docs/contribuer/: carte-domaines.md  charte-documentation.md  developper.md  index.md  prise-en-main.md
docs/deployer/: authentification-api.md  index.md
docs/facturiste/: changelog-facturiste.md  facturiste-cycle-actuel.excalidraw  facturiste-mois-facturable.excalidraw  facturiste-verdicts-qualite.excalidraw  facturiste-vue-ensemble.excalidraw  index.md
docs/maintenir/: gouvernance-reglementaire.md  index-adr.md  index.md  release.md
docs/stylesheets/: cozy.css
electricore/: operator_launcher.py
electricore/api/: CONTEXT.md  README.md  config.py  decorators.py  main.py  models.py  security.py
electricore/bot/: CONTEXT.md  README.md  app.py  auth.py  bot.py  client.py  format.py  livraison.py  surveillance.py  tasks.py
electricore/client/: __init__.py
electricore/config/: __init__.py  accise_rules.csv  cta_rules.csv  env.py  odoo.py  runtime.py  turpe_rules.csv
electricore/core/: CONTEXT.md  __init__.py  energies.py  millesimes.py  models.py  orchestration.py  (+11 more)
notebooks/: README_validation_turpe.md  accise_et_cta.py  accueil.py  debug_pdl_anomalie.py  demo_duckdb_loader.py  demo_pipeline_abonnements.py  demo_pipeline_abonnements_polars.py  demo_pipeline_energie.py  demo_pipeline_energie_polars.py  demo_pipeline_facturation.py  demo_pipeline_facturation_polars.py  demo_pipeline_perimetre.py  facturation.py  injection_rsc.py  marges.py  odoo_exploration.py  pipeline_abonnements_dev.py  pipeline_commun_dev.py  pipeline_energie_dev.py  pipeline_facturation_dev.py  pipeline_perimetre_dev.py  polars_migration_demo.py  surveillance_perimetre.py  turpe_cta_complet.py  validation_orchestration.py  validation_turpe_f15.py  validation_turpe_variable.py
scripts/: anonymiser_donnees.py  mkdocs_hooks.py  render-excalidraw.sh
tests/: README.md  conftest.py  test_abonnements.py  test_polars_migration.py  test_turpe_variable.py
(+617 files in other folders)
