[project]
name = "electricore"
version = "3.4.0rc12"
description = "Moteur de traitement données énergétiques françaises - Architecture Polars/DuckDB pour flux Enedis"
authors = [
    {name = "Virgile"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = [
    "energy",
    "electricity",
    "enedis",
    "polars",
    "duckdb",
    "ingestion",
    "turpe",
    "linky",
    "grid",
    "data-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "polars>=1.0.0,<2.0.0",
    "pandera[polars]>=0.24.0",
    "duckdb>=1.3.2,<2.0.0",
    "fastapi>=0.116.1",
    "xlsxwriter>=3.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "starlette>=0.49.1",
    "uvicorn>=0.35.0,<0.36.0",
    "pyarrow>=23.0.1,<24.0.0",
    "numpy>=2.4.3",
    "pydantic-settings>=2.14.1",
    # Client léger distribué séparément (workspace local) : le moteur en dépend
    # comme source unique des modèles de contrat, même s'il n'en importe les
    # modèles qu'aux slices d'endpoint (#406+).
    "electricore-client>=0.1.0",
]

[project.optional-dependencies]
ingestion = [
    "dlt[filesystem]>=1.16.0,<2.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "paramiko>=4.0.0,<5.0.0",
    "lxml>=6.1.0,<7.0.0",  # XXE fix (CVE-2026-41066)
    "psutil>=5.9.0,<8.0.0",  # stats mémoire dlt sur VPS contraint (sinon UserWarning au run)
]
viz = [
    "altair>=5.5.0,<6.0.0",
    "vegafusion>=2.0.3,<3.0.0",
    "vl-convert-python>=1.8.0,<2.0.0",
    "marimo>=0.23.0",  # pre-auth RCE fix (CVE-2026-39987)
    "plotly[express]>=6.2.0",
]
# Lanceur opérateur `electricore-notebooks` (pont transitoire, #414) : mêmes libs
# que `viz` (uvicorn est déjà une dépendance de base). À retirer à l'arrivée de
# souscriptions_odoo.
notebooks = [
    "marimo>=0.23.0",  # pre-auth RCE fix (CVE-2026-39987)
    "altair>=5.5.0,<6.0.0",
    "plotly[express]>=6.2.0",
    "python-dotenv>=1.0.0",  # charger_env() : .env → os.environ pour ELECTRICORE_API_URL/KEY (déjà transitif via pydantic-settings)
]
# Linéarisation des flux en dbt (ADR-0020, prototype branche dbt).
dbt = [
    "dbt-core>=1.10.0,<2.0.0",
    "dbt-duckdb>=1.9.0,<2.0.0",
]

# Lanceur opérateur (pont transitoire #414, à retirer avec souscriptions_odoo).
[project.scripts]
electricore-notebooks = "electricore.operator_launcher:main"

[project.urls]
Homepage = "https://github.com/Energie-De-Nantes/electricore"
Documentation = "https://github.com/Energie-De-Nantes/electricore/blob/main/README.md"
Repository = "https://github.com/Energie-De-Nantes/electricore"
Issues = "https://github.com/Energie-De-Nantes/electricore/issues"
Changelog = "https://github.com/Energie-De-Nantes/electricore/blob/main/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Le wheel du moteur ne livre QUE le package `electricore` : sans ce pin,
# l'auto-discovery hatchling embarquerait aussi `packages/electricore-client/`.
# Les deux distributions restent disjointes (cf. ADR-0043, #406).
[tool.hatch.build.targets.wheel]
packages = ["electricore"]

# Pont transitoire (#414) : les sources des notebooks opérateur restent dans
# notebooks/ (aucun déplacement), mais sont force-incluses dans le wheel à un
# emplacement résolvable par importlib.resources (electricore/_operator_notebooks/).
# Le lanceur electricore-notebooks les sert en mode run. À retirer avec souscriptions_odoo.
[tool.hatch.build.targets.wheel.force-include]
"notebooks/accueil.py" = "electricore/_operator_notebooks/accueil.py"
"notebooks/facturation.py" = "electricore/_operator_notebooks/facturation.py"
"notebooks/injection_rsc.py" = "electricore/_operator_notebooks/injection_rsc.py"

# Workspace uv : `packages/*` sont des membres résolus localement. Le moteur
# déclare `electricore-client` en dépendance et la prend depuis le workspace.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
electricore-client = { workspace = true }


[dependency-groups]
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "hypothesis>=6.0.0",
    "syrupy>=4.7.2",
    "pytz>=2024.1",  # requis par DuckDB pour les tests avec vraie base de données
]
typecheck = [
    "mypy>=1.13",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "unit: Unit tests - fast, isolated tests of individual functions/expressions",
    "integration: Integration tests - test interactions between components",
    "slow: Slow tests - tests that take more than 5 seconds",
    "smoke: Smoke tests - critical tests for CI fast feedback",
    "skip_ci: Tests requiring real production data, skip in CI",
    "duckdb: Tests requiring DuckDB connection",
    "odoo: Tests requiring Odoo connection",
    "hypothesis: Property-based tests using Hypothesis",
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "-v",
]


[tool.coverage.run]
source = ["electricore"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 45

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["notebooks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line-too-long — fix opportunistically (max line is 161, mass-fixing creates noise)
    "B904",  # raise-without-from-inside-except — style, 26 sites, deferred
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]  # standard FastAPI DI pattern

[tool.mypy]
python_version = "3.12"
files = [
    "electricore/core/loaders",
    "electricore/core/writers",
    "electricore/core/builds",
]
# external libs without complete stubs — skip "module not found" noise
ignore_missing_imports = true
# keep ignores honest (flag any "# type: ignore" that no longer suppresses anything)
warn_unused_ignores = true

# narrow strict scope: enforce annotations + explicit Optional on the public API surface
[[tool.mypy.overrides]]
module = [
    "electricore.core.loaders.*",
    "electricore.core.writers.*",
    "electricore.core.builds.*",
]
disallow_untyped_defs = true        # all defs must be annotated
check_untyped_defs = true           # check bodies even if signature is untyped
no_implicit_optional = true         # forbid `x: str = None`
# intentionally skipped (Polars/Pandera produce too many false positives):
# - disallow_untyped_decorators (DLT/Pandera decorators)
# - warn_return_any (Polars chains)

[tool.ruff.lint.per-file-ignores]
"electricore/ingestion/pipeline_production.py" = ["E402"]  # sys.path setup before imports
"electricore/ingestion/runner.py" = ["E402"]  # chargement .env avant imports (secrets DLT)
"electricore/ingestion/sources/sftp_enedis.py" = ["E402"]  # imports after section banner
"electricore/ingestion/transformers/archive.py" = ["E402"]  # cross-module import after constants block
"tests/integration/test_odoo_writer.py" = ["B017"]  # XML-RPC raises raw Exception, no specific type
# electricore-client cible py310 (>=3.10) : la syntaxe PEP 695 (UP046/UP047) n'y existe pas.
# Le repo cible py312, mais ce sous-paquet doit rester compatible 3.10 → Generic[T] conservé.
"packages/electricore-client/**" = ["UP046", "UP047"]

